--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="container">
 			<div class="section">
 				<div class="row">
-					<div class="col s12 m4">
+					<div class="col s12 m6">
 						<div class="icon-block">
 							<h2 class="center indigo-text text-accent-2"><i class="mdi-content-flag"></i></h2>
 							<h5 class="center">Flag</h5>
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 
-					<div class="col s12 m4">
+					<div class="col s12 m6">
 						<div class="icon-block">
 							<h2 class="center indigo-text text-accent-2"><i class="mdi-hardware-desktop-windows"></i></h2>
 							<h5 class="center">Computer Science</h5>
@@ -73,11 +73,19 @@
 						</div>
 					</div>
 
-					<div class="col s12 m4">
+					<div class="col s12 m6">
 						<div class="icon-block">
 							<h2 class="center indigo-text text-accent-2"><i class="mdi-social-people"></i></h2>
 							<h5 class="center">Cooperation</h5>
 							<p class="light">Create teams of up to 4 members. You will need all the security and computer science skills you have. There are many challenges and categories. Diversify your team and get people with different strengths. Remember, the more people there are on your team, the less blame each person receives.</p>
+						</div>
+					</div>
+					
+					<div class="col s12 m6">
+						<div class="icon-block">
+							<h2 class="center indigo-text text-accent-2"><i class="mdi-action-swap-horiz"></i></h2>
+							<h5 class="center">Interaction</h5>
+							<p class="light">Unlike regular Capture the Flag competitions, CCTF adds a method of interaction between teams. Games are always more fun when risks are involved and team-team interactions are possible. This way, both notice and advanced players will be encouraged to solve challenges and have fun.</p>
 						</div>
 					</div>
 				</div>
