--- a/about.html
+++ b/about.html
@@ -153,9 +153,11 @@
 	</main>
 	
 	<div id="solutions" class="modal">
-		<h4>Solution</h4>
-		<div id="s_content"></div>
-		<div class="action-bar">
+		<div class="modal-content">
+			<h4>Solution</h4>
+			<div id="s_content"></div>
+		</div>
+		<div class="modal-footer">
 			<a href="#" class="btn waves-effect waves-light indigo accent-2 modal-action modal-close">Got it</a>
 		</div>
 	</div>
