Revert "better buttons."
This reverts commit 1e22d432041e4e75706323695955bab0d4b0f16e.

--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
 			<div id="s_content"></div>
 		</div>
 		<div class="modal-footer">
-			<a href="#" class="btn waves-effect waves-light modal-action modal-close">Got it</a>
+			<a href="#" class="btn waves-effect waves-light indigo accent-2 modal-action modal-close">Got it</a>
 		</div>
 	</div>
 	
