--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="response" id="mce-error-response" style="display:none"></div>
 						<div class="response" id="mce-success-response" style="display:none"></div>
 						<div style="position: absolute; left: -5000px;"><input type="text" name="b_fca31272a4fc22a114563f0ce_0258f882fd" tabindex="-1" value=""></div>
-						<button class="btn waves-effect waves-light" type="submit" name="action">Subscribe
+						<button class="btn waves-effect waves-light indigo accent-2" type="submit" name="action">Subscribe
 							<i class="mdi-content-send right"></i>
 						</button>
 					</form>
