--- a/sponsors.html
+++ b/sponsors.html
@@ -29,16 +29,18 @@
 </head>
 
 <body>
-    <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav hide-on-large-only"><i class="medium mdi-navigation-menu indigo-text text-accent-2"></i></a></div>
-    <ul id="nav-mobile" class="side-nav fixed">
-		<li class="logo"><a id="logo-container" href="/" class="brand-logo">
-            <object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
-        <li><a href="/">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="faq">FAQ</a></li>
-        <li><a href="contact">Contact</a></li>
-        <li class="active"><a href="sponsors">Sponsors</a></li>
-    </ul>
+	<header>
+		<div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav hide-on-large-only"><i class="medium mdi-navigation-menu indigo-text text-accent-2"></i></a></div>
+		<ul id="nav-mobile" class="side-nav fixed">
+			<li class="logo"><a id="logo-container" href="/" class="brand-logo">
+				<object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="about">About</a></li>
+			<li><a href="faq">FAQ</a></li>
+			<li><a href="contact">Contact</a></li>
+			<li class="active"><a href="sponsors">Sponsors</a></li>
+		</ul>
+	</header>
 	
 	<main>
 		<div class="section no-pad-bot" id="index-banner">
