--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 			
 			<div class="section">
 				<h5>Elegant Design</h5>
-				<p>The CCTF Platform is a completely novel CTF platform built form scratch using Django and MaterializeCSS. It is one of the only CTF platforms to be <b>fully mobile-compatible</b> and responsive.</p>
+				<p>The CCTF Platform is a completely novel CTF platform built from scratch using Django and MaterializeCSS. It is one of the only CTF platforms to be <b>fully mobile-compatible</b> and responsive.</p>
 			</div>
 			<div class="divider"></div>
 			
