--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
 			<li class="logo"><a id="logo-container" href="/" class="brand-logo">
 				<object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
 			<li><a href="/">Home</a></li>
+			<li><a href="http://play.camsctf.com">Play</a></li>
 			<li><a href="about">About</a></li>
 			<li><a href="faq">FAQ</a></li>
 			<li class="active"><a href="contact">Contact</a></li>
