--- a/faq.html
+++ b/faq.html
@@ -80,13 +80,13 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-action-help"></i>How do I participate?</div>
 							<div class="collapsible-body">
-								<p>Team registration will open around one month before competition begins. Sign up for the mailing list to be reminded.</p>
+								<p>Team registration is now open. Click <a href="http://play.camsctf.com">here</a> to register.</p>
 							</div>
 						</li>
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-school"></i>Who can participate?</div>
 							<div class="collapsible-body">
-								<p>Anyone can participate. However, only teams composed of students currently enrolled in middle school or high school will be eligible for awards.</p>
+								<p>Anyone can participate. However, only teams composed of students currently enrolled in middle school or high school in the United States will be eligible for awards.</p>
 							</div>
 						</li>
 						<li>
@@ -104,7 +104,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-editor-attach-money"></i>Are there prizes?</div>
 							<div class="collapsible-body">
-								<p>Aside from knowledge, there probably will be prizes awarded to top placing teams.</p>
+								<p>Aside from knowledge, there will be prizes awarded to top placing teams. Specific prizes are to be decided.</p>
 							</div>
 						</li>
 						<li>
@@ -128,7 +128,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-public"></i>Where can I start learning?</div>
 							<div class="collapsible-body">
-								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/"><b>GitBook</b></a>. You can also look at other CTF competitions by searching on Google or try out sample challenges on the <a href="about"><b>About</b></a> page.</p>
+								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/">GitBook</a>. You can also look at other CTF competitions by searching on Google or try out sample challenges on the <a href="about">About</a> page.</p>
 							</div>
 						</li>
 					</ul>
