--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			
 			<div class="section">
 				<div class="row center">
-					<h5 class="header col s12 light">Stay updated! Subscribe to be reminded when registration opens.</h5>
+					<h5 class="header col s12 light">Stay updated! Subscribe to CCTF Updates.</h5>
 				</div>
 				<div class="row">
 					<form method="post" action="http://camsctf.us10.list-manage.com/subscribe/post?u=fca31272a4fc22a114563f0ce&amp;id=0258f882fd" class="col s12 center">
