--- a/sponsors.html
+++ b/sponsors.html
@@ -5,6 +5,8 @@
 	<meta name="theme-color" content="#1B5E20">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+	<meta name="description"  content="This competition would not be possible without the generous support of our sponsors." />
+	<meta name="keywords"  content="ctf, cctf, cams, capture, flag, hack, competition" />
     <title>Sponsors - CAMS Capture the Flag</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
