--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="container">
 				<h1 class="header center green-text">Welcome to CCTF</h1>
 				<div class="row center">
-					<h5 class="header col s12 light">A Capture the Flag competition created by CAMS for middle and high school students.</h5>
+					<h5 class="header col s12 light">A Capture the Flag competition created by CAMS for middle and high school students from April 17 - April 24.</h5>
 				</div>
 			</div>
 		</div>
