--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<div class="icon-block">
 							<h2 class="center indigo-text text-accent-2"><i class="mdi-action-swap-horiz"></i></h2>
 							<h5 class="center">Interaction</h5>
-							<p class="light">Unlike regular Capture the Flag competitions, CCTF adds a method of interaction between teams. Games are always more fun when risks are involved and team-team interactions are possible. This way, both notice and advanced players will be encouraged to solve challenges and have fun.</p>
+							<p class="light">Unlike regular Capture the Flag competitions, CCTF adds a method of interaction between teams. Games are always more fun when risks are involved and team-team interactions are possible. This way, both novice and advanced players will be encouraged to solve challenges and have fun.</p>
 						</div>
 					</div>
 				</div>
