--- a/sponsors.html
+++ b/sponsors.html
@@ -93,6 +93,22 @@
 						</div>
 					</div>
 					
+					<div class="col m6 s12">
+						<div class="card">
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" width="auto" src="logos/hscs.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">HSCS<i class="mdi-navigation-more-vert right"></i></span>
+								<p><a href="http://www.hscs.io/" target="_blank">Website</a></p>
+							</div>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">HSCS <i class="mdi-navigation-close right"></i></span>
+								<p>HSCS is a high school organization promoting computer science education. CCTF thanks HSCS for helping out with various aspects of the competition.</p>
+							</div>
+						</div>
+					</div>
+					
 				</div>	
 			</div>
 		</div>
