--- a/sponsors.html
+++ b/sponsors.html
@@ -109,6 +109,22 @@
 						</div>
 					</div>
 					
+					<div class="col m6 s12">
+						<div class="card">
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" width="auto" src="logos/dg.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">Desolate Games<i class="mdi-navigation-more-vert right"></i></span>
+								<p><a href="http://www.desolategames.com" target="_blank">Website</a></p>
+							</div>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">Desolate Games <i class="mdi-navigation-close right"></i></span>
+								<p>Desolate games is a company founded by CCTF co-creator, Oskar Wirga. CCTF thanks Desolate Games for sponsoring this competition.</p>
+							</div>
+						</div>
+					</div>
+					
 				</div>	
 			</div>
 		</div>
