--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
 						<div class="icon-block">
 							<h3 class="center indigo-text text-accent-2"><a id="fore" href="#solutions"><i class="mdi-action-search"></i></a></h3>
 							<h5 class="center">Forensics</h5>
-							<p class="light">I was told that <b><a href="sample/search.png">search.png</a></b> had something hidden inside of it. What's inside of the image? I've looked at every pixel and I'm pretty sure that nothing is inside of the image. That's 262144 pixels!!!</p>
+							<p class="light">I was told that <b><a href="sample/search.png" download>search.png</a></b> had something hidden inside of it. What's inside of the image? I've looked at every pixel and I'm pretty sure that nothing is inside of the image. That's 262144 pixels!!!</p>
 						</div>
 					</div>
 					<div class="col s12 l6">
@@ -162,7 +162,7 @@
 						<div class="icon-block">
 							<h3 class="center indigo-text text-accent-2"><a id="misc" href="#solutions"><i class="mdi-social-share"></i></a></h3>
 							<h5 class="center">Miscellaneous</h5>
-							<p class="light">I caught someone trying to steal something from the server! Take this <a href="sample/capture.pcapng"><b>capture.pcacpng</b></a> and see if you can make sense of it. You'll need Wireshark to find out what was unjustly taken from me. My precious file.</p>
+							<p class="light">I caught someone trying to steal something from the server! Take this <a href="sample/capture.pcapng" download><b>capture.pcacpng</b></a> and see if you can make sense of it. You'll need Wireshark to find out what was unjustly taken from me. My precious file.</p>
 						</div>
 					</div>
 				</div>
