not all my credit :tongue:

--- a/faq.html
+++ b/faq.html
@@ -100,7 +100,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-group"></i>Who is running this?</div>
 							<div class="collapsible-body">
-								<p>The founders of CAMS CSC, Lujing Cen and Oskar Wirga, are the main maintainers of this competition.</p>
+								<p>CAMS CSC is the main maintainer of this competition.</p>
 							</div>
 						</li>
 						<li>
