--- a/sponsors.html
+++ b/sponsors.html
@@ -80,22 +80,6 @@
 					<div class="col m6 s12">
 						<div class="card">
 							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" width="auto" src="logos/ppp.png">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator grey-text text-darken-4">PPP<i class="mdi-navigation-more-vert right"></i></span>
-								<p><a href="http://www.pwning.net/" target="_blank">Website</a></p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title grey-text text-darken-4">PPP <i class="mdi-navigation-close right"></i></span>
-								<p>CCTF thanks Carnegie Mellon's Plaid Parliament of Pwning for inspiring CCTF and spreading the word about the competition.</p>
-							</div>
-						</div>
-					</div>
-					
-					<div class="col m6 s12">
-						<div class="card">
-							<div class="card-image waves-effect waves-block waves-light">
 								<img class="activator" width="auto" src="logos/hscs.png">
 							</div>
 							<div class="card-content">
@@ -124,11 +108,18 @@
 							</div>
 						</div>
 					</div>
-					
 				</div>	
 			</div>
 		</div>
-		<br>
+		
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<h1 class="header center green-text">Special Thanks</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">CCTF would like to give special thanks to the following people and organizations.</h5>
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer class="green page-footer">
