--- a/sponsors.html
+++ b/sponsors.html
@@ -114,9 +114,14 @@
 		
 		<div class="section no-pad-bot" id="index-banner">
 			<div class="container">
-				<h1 class="header center green-text">Special Thanks</h1>
 				<div class="row center">
-					<h5 class="header col s12 light">CCTF would like to give special thanks to the following people and organizations.</h5>
+					<h5 class="header col s12 light">CCTF would also like to give special thanks to the following people/organizations.</h5>
+				</div>
+				<div class="row thanks center">
+					<ul>
+						<li>PPP, for helping us spread the word about the competition.</li>
+						<li>Ms. Barnett, for her inspiration and mentoring.</li>
+					</ul>
 				</div>
 			</div>
 		</div>
