--- a/about.html
+++ b/about.html
@@ -99,6 +99,7 @@
 					<li>Duplicate teams composed of the same individuals are not allowed.</li>
 					<li>Try to solve problems rather than brute-forcing the submission system. The probability that you will succeed is very small. Seriously.</li>
 					<li>Do not DDoS or DoS. Sending continuous requests when a challenge calls for such methods is perfectly acceptable. If you know how to perform these attacks, put your skills to better use by solving the challenges. Don't ruin the fun for everyone.</li>
+					<li>Limit the use of automated tools, crawlers, or scanners that send continuous requests over a prolonged period of time. None of these are required to solve any of the challenges.</li>
 					<li>Have fun and learn.</li>
 				</ul>
 			</div>
