update error pages

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 			</div>
 			<div class="divider"></div>
 			
-			<div class="section rules">
+			<div class="section rules" id="rules">
 				<h5>Rules</h5>
 				<p>We can't really stop you from not obeying the rules. However, infractions <b>will</b> result in disqualification depending on the severity.</p>
 				<ul>
