--- a/500.html
+++ b/500.html
@@ -24,8 +24,8 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <!-- CSS  -->
-    <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 		<div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav hide-on-large-only"><i class="medium mdi-navigation-menu indigo-text text-accent-2"></i></a></div>
 		<ul id="nav-mobile" class="side-nav fixed">
 			<li class="logo"><a id="logo-container" href="/" class="brand-logo">
-				<object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
+				<object id="front-page-logo" type="image/png" data="/logo.png"></object></a></li>
 			<li><a href="/">Home</a></li>
 			<li><a href="http://play.camsctf.com">Play</a></li>
 			<li><a href="about">About</a></li>
@@ -98,7 +98,7 @@
 	</footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+    <script src="/js/materialize.min.js"></script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-59224610-1', 'auto');ga('send', 'pageview');
 		$(function(){$('.button-collapse').sideNav();});
