--- a/about.html
+++ b/about.html
@@ -58,6 +58,17 @@
 		<br>
 		
 		<div class="container">
+			<div class="section" id="prizes">
+				<h5>Awards and Prizes</h5>
+				<p>We know that all teams need more than just the notion of learning to be motivated. This is why we have some awesome awards thanks to our generous sponsors.</p>
+				<ul>
+					<li>1st Place Team: $512 Visa Gift Card (or equivalent)</li>
+					<li>2st Place Team: $256 Visa Gift Card (or equivalent)</li>
+					<li>3st Place Team: $128 Visa Gift Card (or equivalent)</li>
+				</ul>
+			</div>
+			<div class="divider"></div>	
+	
 			<div class="section">
 				<h5>CTF</h5>
 				<p>Capture the flag is a competition in which teams solve challenges and find 'flags.' These flags are not physical flags. Instead, they are strings of characters that can be submitted for points.</p>
