--- a/sponsors.html
+++ b/sponsors.html
@@ -160,11 +160,11 @@
 	
 			<div class="divider"></div>
 			
-			<div class="section" id="index-banner">
+			<div class="section" id="index-banner thanks">
 				<div class="row center">
 					<h5 class="header col s12 light">CCTF would also like to give special thanks to the following people/organizations.</h5>
 				</div>
-				<div class="row thanks center">
+				<div class="row center">
 					<ul>
 						<li>PPP, for helping us spread the word about the competition.</li>
 						<li>Ms. Barnett, for her inspiration and mentoring.</li>
