update foundation logo

--- a/sponsors.html
+++ b/sponsors.html
@@ -60,7 +60,7 @@
 		<div class="container">
 		
 			<div class="section">			
-				<h4 class="col s12 center">Gold Sponsors</h5>
+				<h4 class="col s12 center">Gold Sponsors</h4>
 				<div class="row">
 					<div class="col m6 s12">
 						<div class="card">
@@ -99,7 +99,7 @@
 			<div class="divider"></div>
 				
 			<div class="section">			
-				<h4 class="col s12 center">Silver Sponsors</h5>
+				<h4 class="col s12 center">Silver Sponsors</h4>
 				<div class="row">
 					<div class="col m6 s12 offset-m3">
 						<div class="card">
@@ -122,7 +122,7 @@
 			<div class="divider"></div>
 			
 			<div class="section">			
-				<h4 class="col s12 center">Supporting Sponsors</h5>
+				<h4 class="col s12 center">Supporting Sponsors</h4>
 				<div class="row">		
 					<div class="col m6 s12">
 						<div class="card">
@@ -160,7 +160,7 @@
 	
 			<div class="divider"></div>
 			
-			<div class="section" id="index-banner thanks">
+			<div class="section" id="thanks">
 				<div class="row center">
 					<h5 class="header col s12 light">CCTF would also like to give special thanks to the following people/organizations.</h5>
 				</div>
