--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-editor-attach-money"></i>Are there prizes?</div>
 							<div class="collapsible-body">
-								<p>Aside from knowledge, there will be prizes awarded to top placing teams. Specific prizes are to be decided.</p>
+								<p>Aside from knowledge, there will be <a href="/about#prizes">prizes</a> awarded to top placing teams.</p>
 							</div>
 						</li>
 						<li>
