--- a/sponsors.html
+++ b/sponsors.html
@@ -166,7 +166,7 @@
 				</div>
 				<div class="row center">
 					<ul>
-						<li>PPP, for helping us spread the word about the competition.</li>
+						<li><a href="http://pwning.net" target="_blank">Plaid Parliament of Pwning (PPP)</a>, for helping us spread the word about the competition.</li>
 						<li>Ms. Barnett, for her inspiration and mentoring.</li>
 					</ul>
 				</div>
