--- a/about.html
+++ b/about.html
@@ -60,11 +60,13 @@
 		<div class="container">
 			<div class="section" id="prizes">
 				<h5>Awards and Prizes</h5>
-				<p>We know that all teams need more than just the notion of learning to be motivated. This is why we have some awesome awards thanks to our generous sponsors.</p>
+				<p>We know that all teams need more than just the notion of learning to be motivated. This is why we have some awesome awards thanks to our generous sponsors. Winning teams can choose the form of prize (cash, Amazon gift card, or something else within reason). Please note that only teams composed of middle and/or high school students from within the United States can receive prizes.</p>
 				<ul>
-					<li>1st Place Team: $512 Visa Gift Card (or equivalent)</li>
-					<li>2st Place Team: $256 Visa Gift Card (or equivalent)</li>
-					<li>3st Place Team: $128 Visa Gift Card (or equivalent)</li>
+					<li>1st Place Team: <b>$512</b></li>
+					<li>2st Place Team: <b>$256</b></li>
+					<li>3st Place Team: <b>$128</b></li>
+					<li>4st Place Team: <b>$64</b></li>
+					<li>5st Place Team: <b>$32</b></li>
 				</ul>
 			</div>
 			<div class="divider"></div>	
