--- a/about.html
+++ b/about.html
@@ -63,10 +63,10 @@
 				<p>We know that all teams need more than just the notion of learning to be motivated. This is why we have some awesome awards thanks to our generous sponsors. Winning teams can choose the form of prize (cash, Amazon gift card, or something else within reason). Please note that only teams composed of middle and/or high school students from within the United States can receive prizes.</p>
 				<ul>
 					<li>1st Place Team: <b>$512</b></li>
-					<li>2st Place Team: <b>$256</b></li>
-					<li>3st Place Team: <b>$128</b></li>
-					<li>4st Place Team: <b>$64</b></li>
-					<li>5st Place Team: <b>$32</b></li>
+					<li>2nd Place Team: <b>$256</b></li>
+					<li>3rd Place Team: <b>$128</b></li>
+					<li>4th Place Team: <b>$64</b></li>
+					<li>5th Place Team: <b>$32</b></li>
 				</ul>
 			</div>
 			<div class="divider"></div>	
