--- a/about.html
+++ b/about.html
@@ -68,6 +68,7 @@
 					<li>4th Place Team: <b>$64</b></li>
 					<li>5th Place Team: <b>$32</b></li>
 				</ul>
+				<p>Note that we must be able to contact you via email! If you do not enter a valid email or do respond within the given time, we will give the prize to the next qualifying team. In addition, CAMS-affiliated or CAMS CSC-affiliated teams are not eligible for the above prizes.</p>
 			</div>
 			<div class="divider"></div>	
 	
