--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 		<div class="container">
 			<div class="section" id="prizes">
 				<h5>Awards and Prizes</h5>
-				<p>We know that all teams need more than just the notion of learning to be motivated. This is why we have some awesome awards thanks to our generous sponsors. Winning teams can choose the form of prize (cash, Amazon gift card, or something else within reason). Please note that only teams composed of middle and/or high school students from within the United States can receive prizes.</p>
+				<p>We know that all teams need more than just the notion of learning to be motivated. This is why we have some awesome awards thanks to our generous sponsors. Winning teams can choose the form of prize (cash, Amazon Gift Card, or something else within reason). Please note that only teams composed of middle and/or high school students from within the United States can receive these prizes.</p>
 				<ul>
 					<li>1st Place Team: <b>$512</b></li>
 					<li>2nd Place Team: <b>$256</b></li>
@@ -68,7 +68,8 @@
 					<li>4th Place Team: <b>$64</b></li>
 					<li>5th Place Team: <b>$32</b></li>
 				</ul>
-				<p>Note that we must be able to contact you via email! If you do not enter a valid email or do respond within the given time, we will give the prize to the next qualifying team. In addition, CAMS-affiliated or CAMS CSC-affiliated teams are not eligible for the above prizes.</p>
+				<p>In addition to the above prizes, we will also give <b>$20 Amazon Gift Cards</b> to 20 teams with the best write-ups! Write-ups detail how your team solved a challenge (almost like the procedures of a science experiment). Another team should be able to follow your steps and arrive at the solution. To qualify, your team must complete write-ups for ALL challenges that your team has completed. You can do them in any form but we prefer to have them on GitHub. <a href="mailto:contact@camsctf.com">Send</a> us a link to the location of your write-ups within one month of the end of the competition (last day to send us a link is 5/24). We will review the write-ups and choose the top 20 teams. Our decisions are final! International and college competitors also qualify for this award.</p>
+				<p>Note that we must be able to contact you via email! If you do not enter a valid email or do respond within the given time, we will give the prize to the next qualifying team. In addition, CAMS-affiliated or CAMS CSC-affiliated teams are not eligible for ANY of the above prizes.</p>
 			</div>
 			<div class="divider"></div>	
 	
