--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
 				<object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
 			<li><a href="/">Home</a></li>
 			<li><a href="http://play.camsctf.com">Play</a></li>
-			<li><a href="about">About</a></li>
-			<li><a href="faq">FAQ</a></li>
-			<li class="active"><a href="contact">Contact</a></li>
-			<li><a href="sponsors">Sponsors</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/faq">FAQ</a></li>
+			<li class="active"><a href="/contact">Contact</a></li>
+			<li><a href="/sponsors">Sponsors</a></li>
 		</ul>
 	</header>
 	
@@ -103,13 +103,13 @@
 				<div class="col l3 s12">
 					<h5 class="white-text">Pages</h5>
 					<ul>
-						<li><a class="white-text" href="contact">Contact</a>
+						<li><a class="white-text" href="/contact">Contact</a>
 						</li>
-						<li><a class="white-text" href="faq">FAQ</a>
+						<li><a class="white-text" href="/faq">FAQ</a>
 						</li>
-						<li><a class="white-text" href="about">About</a>
+						<li><a class="white-text" href="/about">About</a>
 						</li>
-						<li><a class="white-text" href="sponsors">Sponsors</a>
+						<li><a class="white-text" href="/sponsors">Sponsors</a>
 						</li>
 					</ul>
 				</div>
