--- a/faq.html
+++ b/faq.html
@@ -38,10 +38,10 @@
 				<object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
 			<li><a href="/">Home</a></li>
 			<li><a href="http://play.camsctf.com">Play</a></li>
-			<li><a href="about">About</a></li>
-			<li class="active"><a href="faq">FAQ</a></li>
-			<li><a href="contact">Contact</a></li>
-			<li><a href="sponsors">Sponsors</a></li>
+			<li><a href="/about">About</a></li>
+			<li class="active"><a href="/faq">FAQ</a></li>
+			<li><a href="/contact">Contact</a></li>
+			<li><a href="/sponsors">Sponsors</a></li>
 		</ul>
 	</header>
 	
@@ -130,7 +130,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-public"></i>Where can I start learning?</div>
 							<div class="collapsible-body">
-								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a target="_blank" href="http://bobbyluig.gitbooks.io/csc-learn/">GitBook</a>. You can also look at other CTF competitions by searching on Google or try out sample challenges on the <a href="about">About</a> page.</p>
+								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a target="_blank" href="http://bobbyluig.gitbooks.io/csc-learn/">GitBook</a>. You can also look at other CTF competitions by searching on Google or try out sample challenges on the <a href="/about">About</a> page.</p>
 							</div>
 						</li>
 					</ul>
@@ -150,13 +150,13 @@
 				<div class="col l3 s12">
 					<h5 class="white-text">Pages</h5>
 					<ul>
-						<li><a class="white-text" href="contact">Contact</a>
+						<li><a class="white-text" href="/contact">Contact</a>
 						</li>
-						<li><a class="white-text" href="faq">FAQ</a>
+						<li><a class="white-text" href="/faq">FAQ</a>
 						</li>
-						<li><a class="white-text" href="about">About</a>
+						<li><a class="white-text" href="/about">About</a>
 						</li>
-						<li><a class="white-text" href="sponsors">Sponsors</a>
+						<li><a class="white-text" href="/sponsors">Sponsors</a>
 						</li>
 					</ul>
 				</div>
