--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 			<div class="section">
 				<h5>Unparalleled Fun</h5>
 				<p>Challenge yourself and learn new concepts. You never really know how good you are at security and computer science until you really try it out. You might just win.</p>
-				<p>Don't know anything about computer science or cyber-security? Fear not. CCTF is designed to accommodate both novice and advanced players alike. Many challenges will guide you to the right resources. As long as you're willing to learn and do a little research, most challenges should be within reach.</p>
+				<p>Don't know anything about computer science or cyber-security? Fear not. CCTF is designed to accommodate both novice and veteran players alike. Many challenges will guide you to the right resources. As long as you're willing to learn and do a little research, most challenges should be within reach.</p>
 			</div>
 			<div class="divider"></div>
 
@@ -94,7 +94,7 @@
 			
 			<div class="section">
 				<h5>Elegant Design</h5>
-				<p>The CCTF Platform is a completely novel CTF platform built from scratch using Django and MaterializeCSS. It is one of the only CTF platforms to be <b>fully mobile-compatible</b> and responsive.</p>
+				<p>The CCTF Platform is a completely novel CTF platform built from scratch using Django and Materialize. It is one of the only CTF platforms to be <b>fully mobile-compatible</b> and responsive.</p>
 			</div>
 			<div class="divider"></div>
 			
